--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "crypto": "^1.0.1",
+    "ethers": "^6.16.0",
+    "ethersjs": "^0.0.1-security",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.22.0",
     "reflect-metadata": "^0.2.2",
